k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
  labels:
    app: wisecow
spec:
  selector:
    app: wisecow
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4499
  type: ClusterIP
